<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Anuto TD</string>

    <string name="menu">Menu</string>
    <string name="build_tower">Build</string>
    <string name="next_wave">Next Wave</string>
    <string name="normal_speed">1x</string>
    <string name="var_speed">%1$dx</string>

    <string name="restart">Restart</string>
    <string name="change_map">Change Map</string>
    <string name="settings">Settings</string>

    <string name="sound">Sound</string>
    <string name="theme">Theme</string>
    <string name="change_theme">Change theme</string>
    <string name="change_theme_warning">Are you sure you want to change the theme? The game will restart.</string>
    <string name="back_button_mode">Close app with back button</string>
    <string name="reset_highscores">Reset highscores</string>
    <string name="reset_highscores_warning">Are you sure you want to reset all highscores?</string>
    <string name="start_tutorial">Start tutorial</string>
    <string name="start_tutorial_warning">Are you sure you want to start the tutorial? The game will restart.</string>
    <string name="transparent_menus">Transparent in-game menus</string>
    <string name="show_tower_levels">Always show tower levels</string>
    <string name="enable_auto_waves">Enable auto start new wave</string>

    <string name="game_over">Game Over!</string>
    <string name="score">Score</string>

    <string name="credits">Credits</string>
    <string name="lives">Lives</string>
    <string name="wave">Wave</string>
    <string name="bonus">Bonus</string>

    <string name="level">Level</string>
    <string name="damage">Damage</string>
    <string name="reload">Reload</string>
    <string name="range">Range</string>
    <string name="splash">Explosive radius</string>
    <string name="distance">Distance</string>
    <string name="intensity">Intensity</string>
    <string name="duration">Duration</string>
    <string name="inflicted">Inflicted</string>

    <string name="lock_target">Lock Target</string>
    <string name="strategy">Strategy</string>
    <string name="enhance">Enhance</string>
    <string name="upgrade">Upgrade</string>
    <string name="sell">Sell</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="twice">Twice</string>

    <string name="strategy_closest">Closest</string>
    <string name="strategy_weakest">Weakest</string>
    <string name="strategy_strongest">Strongest</string>
    <string name="strategy_first">First</string>
    <string name="strategy_last">Last</string>

    <string name="theme_original">Original</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_colour">Colour</string>

    <string name="map_original_name">The Original</string>
    <string name="map_waiting_line_name">I hate waiting lines</string>
    <string name="map_turn_round_name">Turn a round</string>
    <string name="map_hurry_name">We\'re in a hurry!</string>
    <string name="map_civyshk_2y_name">Civyshk 2Y</string>
    <string name="map_civyshk_line5_name">Civyshk Line5</string>
    <string name="map_civyshk_labyrinth_name">Civyshk Labyrinth</string>
    <string name="map_civyshk_yard_name">Civyshk Yard</string>
    <string name="map_higgledy_piggledy_name">Higgledy Piggledy</string>
    <string name="map_big_u_name">Big U</string>
    <string name="map_cloverleaf_name">Cloverleaf</string>
    <string name="map_roundabout_name">Roundabout</string>
    <string name="map_runway_name">Runway</string>
    <string name="press_back_button_again_toast">Press back button again to exit</string>

    <string name="tutorial">Getting Started</string>
    <string name="got_it">Got It!</string>
    <string name="skip_tutorial">Skip Tutorial</string>

    <string name="tutorial_build_tower">Welcome to Anuto TD! Start by building a tower: Drag a tower from the inventory on top onto the playground.</string>
    <string name="tutorial_credits">If the price tag of a tower becomes red, you don\'t have enough credits to buy this tower. You earn credits by killing enemies and finishing waves.</string>
    <string name="tutorial_tower_options_1">Tap a tower to view its range, tap it again to open its menu for more options.</string>
    <string name="tutorial_tower_options_2">The strategy defines how the tower chooses its target. Lock target means that the tower will not switch target as long as the current target stays within range.</string>
    <string name="tutorial_tower_options_3">Enhancing a tower will make it perform better. Upgrading a tower will replace the tower with a better tower.\n\n<b>Tip:</b> If upgrading towers, keep in mind that credits already spent into enhancements are lost.</string>
    <string name="tutorial_tower_options_4">Selling the tower will remove it and you\'ll get some credits back.\n\n<b>Tip:</b> Towers decrease in value over time.</string>
    <string name="tutorial_next_wave">Press \"Next Wave\" to call in the next wave of enemies. The goal is that none of them makes it through your defense.\n\n<b>Tip:</b> If you call in the next wave while there are still active waves, you earn bonus credits!</string>
    <string name="tutorial_enemies">If an enemy finishes the path, you loose one life. The game is over if you have no more lives left.\n\n<b>Tip:</b> Some towers are more effective against a certain type of enemy than others.</string>
    <string name="tutorial_finish">Good luck and have fun! You can activate the tutorial again in the settings.</string>
    <string name="max">Max</string>
    <string name="dps" translatable="false">DPS</string>
    <string name="savemenu">Save menu</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="health">Health:</string>
    <string name="speed">Speed:</string>
    <string name="reward">Reward:</string>
    <string name="weak_against">Weak against:</string>
    <string name="strong_against">Strong against:</string>
    <string name="none">None</string>
    <string name="quicksave">Quicksave</string>
    <string name="loadmenu">Load menu</string>
    <string name="remainingEnemiesCount">Remaining enemies</string>
    <string name="saveGameSuccessful">Savegame successfully created</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Do you really want to delete this savegame?</string>
    <string name="name">Name:</string>
    <string name="soldier">Soldier</string>
    <string name="blob">Blob</string>
    <string name="sprinter">Sprinter</string>
    <string name="flyer">Flyer</string>
    <string name="healer">Healer</string>
    <string name="relay">Relay</string>
    <string name="enable_max_buttons">Enable max. enhencement/upgrade buttons</string>
    <string name="enable_relay_buttons">Enable relay buttons</string>

</resources>
