<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/backgroundPopup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tutorial"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/skip_tutorial" />

        <Button
            android:id="@+id/btn_got_it"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/got_it" />
    </LinearLayout>

</LinearLayout>
