<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ch.logixisland.anuto.view.game.HeaderFragment"
    android:orientation="vertical"
    android:background="?attr/backgroundBorderBottom">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/txt_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="?attr/textColor"
            android:text="@string/credits"/>

        <TextView
            android:id="@+id/txt_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/txt_credits"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="?attr/textColor"
            android:text="@string/bonus"/>

        <TextView
            android:id="@+id/txt_lives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/txt_bonus"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="?attr/textColor"
            android:text="@string/lives"/>

        <TextView
            android:id="@+id/txt_wave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="?attr/textColor"
            android:text="@string/wave"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ch.logixisland.anuto.view.game.TowerView
            android:id="@+id/view_tower_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true" />

        <ch.logixisland.anuto.view.game.TowerView
            android:id="@+id/view_tower_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/view_tower_1" />

        <ch.logixisland.anuto.view.game.TowerView
            android:id="@+id/view_tower_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/view_tower_2" />

        <ch.logixisland.anuto.view.game.TowerView
            android:id="@+id/view_tower_4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/view_tower_3" />

        <Button
            android:id="@+id/btn_next_wave"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/next_wave" />

        <Button
            android:id="@+id/btn_menu"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_next_wave"
            android:layout_marginEnd="5dp"
            android:text="@string/menu" />
    </RelativeLayout>

</LinearLayout>
