<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundPopup"
    android:orientation="vertical"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:id="@+id/txt_level_text"
                android:layout_column="0"
                android:paddingRight="20dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_level"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text1"
                android:layout_column="0"
                android:paddingRight="20dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property1"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text2"
                android:layout_column="0"
                android:paddingRight="20dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property2"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text3"
                android:layout_column="0"
                android:paddingRight="20dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property3"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text4"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property4"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text5"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property5"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txt_property_text6"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="Property:" />

            <TextView
                android:id="@+id/txt_property6"
                android:layout_column="1"
                android:text="1234" />
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_strategy"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/strategy" />

            <Button
                android:id="@+id/btn_relay_strategy"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/relay" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lock_target"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/lock_target" />

            <Button
                android:id="@+id/btn_relay_lock_target"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/relay" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_enhance"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/enhance" />

            <Button
                android:id="@+id/btn_enhance_max"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/max" />

            <Button
                android:id="@+id/btn_relay_enhance"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/relay" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_upgrade"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="@string/upgrade" />

            <Button
                android:id="@+id/btn_upgrade_max"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/max" />

            <Button
                android:id="@+id/btn_relay_upgrade"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:maxLines="1"
                android:text="@string/relay" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_sell"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/sell" />

    </LinearLayout>

</LinearLayout>
